          tree_blue_style
### prefs.treeview
        - removed tree calls from
            - fe_set_channel, fe_clear_channel, focus_in, gui_make_tab_window
              fe_session_callback, 
   - removed from fe-gtk.c
        - calls from fe_set_hilight, fe_print_text
   c) some cleanups
     - maingui.c
       - removed buttons from maingui_new_tab
       - removed maingui_delink_nontab
 
0.2.1; removing dialog windows
""""""
  a)
  - removed new_dialog from maingui.c
 ### sess->is_dialog
 ### prefs.treeview???           
  - added if(!sess->iss_dialog) to fe_new_window in fe-gtk.c
    still segfaults, maybe i should dig this out more...
  - after some temp hacks fe_new_window in fe-gtk.c 
    edited so that new_session isnt called with the string from set 
    inbound.c; in private_msg, channel_action
    outbound.c; cmd_query, (lastlog???)
 ### lastlog function???
  - removed fe_change_nick from fe.h & inbound.c
  - removed extern ... *new_dialog from outbound.c
  - deleted dialog.c edited makefile, po-file
 b) specifically gui->if_is_dialog
   - removed dialog stuff from maingui.c
      fe_set_title fe_set_channel, fe_set_nick, maingui_word_check,
      relink_window(2x)
   - fkeys.c; tab_nick_comp
   - text_gui.c PrintTextLine
 c)
   - removed the 4 buttons from tbox in create_window
   - removed maingui_moveright/left, X_session, relink_window
             maingui_refresh
   - removed the show userlist button
     
0.2.0;
""""""
 a)  
  - deleted ascii.c (ascii_click; ascii_open)
  - removed whole toolbox from create_window
  - removed confmode from
    fe-gtk.c, fe-gtk.h, common/fe.h & inbound.c
  - removed maingui_toolbox, maingui_code,
    maingui_cp, toolbox_color, toolbox_button
  - removed toolbox and confmode from struct session_gui in fe-gtk.h
  - edited the logo

  b) 
  - removed *menu from session_gui in fe-gtk.h
  c)
  - removed flag_*, limit_entry, key_entry structure from maingui.c